log

Thu 17 Aug 2023 08:32:36 PM UTC: 
 exercises.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:16: error: expected expression before ‘<’ token
   17 |     if(arr[i]) < arr[i+1]){
      |                ^
exercises.c:17:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   17 |     if(arr[i]) < arr[i+1]){
      |     ^~
exercises.c:17:26: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   17 |     if(arr[i]) < arr[i+1]){
      |                          ^
exercises.c:17:26: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
e087989
Thu 17 Aug 2023 08:32:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
e01ad02
Thu 17 Aug 2023 08:33:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:22:10: error: ‘mayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   22 |   return mayor;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
1a470a0
Thu 17 Aug 2023 08:34:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
128ccca
Thu 17 Aug 2023 08:34:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
132386e
Thu 17 Aug 2023 08:34:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
0f11a31
Thu 17 Aug 2023 08:35:55 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
bb4da5a
Thu 17 Aug 2023 08:40:18 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|7
total_score: 0/70
0022514
Thu 17 Aug 2023 08:40:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
fe9fddb
Thu 17 Aug 2023 08:45:20 PM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|6
total_score: 10/70
722a923
Thu 17 Aug 2023 08:47:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
d06f081
Thu 17 Aug 2023 08:48:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Thu 17 Aug 2023 08:48:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Thu 17 Aug 2023 08:48:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
d095a04
Thu 17 Aug 2023 08:48:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
f8ecac2
Thu 17 Aug 2023 08:49:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
5704e33
Thu 17 Aug 2023 08:51:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
7e0860c
Thu 17 Aug 2023 09:04:18 PM UTC: 
 exercises.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
b92ad81
Thu 17 Aug 2023 09:08:33 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:99:3: error: expected ‘(’ before ‘}’ token
   99 |   }
      |   ^
      |   (
Compilation failed
6a4ab41
Thu 17 Aug 2023 09:08:47 PM UTC: 
 exercises.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  0|5
total_score: 20/70
e354942
Sat 19 Aug 2023 06:37:48 PM UTC: 
 exercises.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
15e8f4d
Sat 19 Aug 2023 06:39:16 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
64cea27
Sat 19 Aug 2023 06:40:40 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
6910390
Sat 19 Aug 2023 06:41:49 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
25248fa
Sat 19 Aug 2023 06:43:02 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
596b504
Sat 19 Aug 2023 06:43:45 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
9b9c2de
Sat 19 Aug 2023 06:59:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
f64a88c
Sat 19 Aug 2023 08:07:29 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|5
total_score: 20/70
5735073
Sat 19 Aug 2023 08:11:18 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 20/70
0ea63b2
Sat 19 Aug 2023 08:12:11 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
62c2c68
Sat 19 Aug 2023 08:12:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
24a513a
Sat 19 Aug 2023 08:14:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Sat 19 Aug 2023 08:14:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
a9ffed1
Sat 19 Aug 2023 08:14:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
751b0d8
Sat 19 Aug 2023 08:21:23 PM UTC: 
 exercises.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:94:3: error: unknown type name ‘bool’
   94 |   bool ascendente = true;
      |   ^~~~
exercises.c:6:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    5 | #include <string.h>
  +++ |+#include <stdbool.h>
    6 | 
exercises.c:94:21: error: ‘true’ undeclared (first use in this function)
   94 |   bool ascendente = true;
      |                     ^~~~
exercises.c:94:21: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c:94:21: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:95:3: error: unknown type name ‘bool’
   95 |   bool descendente = true;
      |   ^~~~
exercises.c:95:3: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c:101:20: error: ‘false’ undeclared (first use in this function)
  101 |       ascendente = false;
      |                    ^~~~~
exercises.c:101:20: note: ‘false’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c:119:1: error: control reaches end of non-void function [-Werror=return-type]
  119 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
df78826
Sat 19 Aug 2023 08:22:13 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 20/70
bb8085b
